--- a/src/Components/Login/Login.module.css
+++ b/src/Components/Login/Login.module.css
@@ -1,21 +1,31 @@
 .loginForm {
-  display: flexbox;
-  margin: center;
-  position: center;
-  font-style: italic;
+  color: rgba(23, 133, 133, 0.836);
+}
+.form {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 300px;
+  height: 300px;
+  background: rgb(216, 250, 216);
+  border: 4px solid #fff;
+  border-radius: 10px;
+  margin: 5px;
+  padding: 40px;
 }
 .label {
-    position: center;
-  text-align: center;
+  font-size: 20px;
+  display: block;
 }
 .inputField {
-  display: flexbox;
-  justify-content: center;
-  position: center;
-  text-align: center;
-  color: rgb(190, 10, 245);
-  flex-wrap: wrap;
+  display: block;
+  width: 80%;
+  padding: 10px 10px;
+  border: 2px solid #bb9494;
+  border-radius: 4px;
 }
+
 .button {
   padding: 10px 20px;
   background-color: #396bb6;
