--- a/src/Components/Login/Login.module.css
+++ b/src/Components/Login/Login.module.css
@@ -1,5 +1,5 @@
 .loginForm {
-  color: rgba(23, 133, 133, 0.836);
+  color: rgba(27, 136, 136, 0.836);
 }
 .form {
   position: absolute;
@@ -7,23 +7,25 @@
   left: 50%;
   transform: translate(-50%, -50%);
   width: 300px;
-  height: 300px;
+  height: auto;
   background: rgb(216, 250, 216);
   border: 4px solid #fff;
   border-radius: 10px;
-  margin: 5px;
+  margin-top: 5px;
+  margin-bottom: 15px;
   padding: 40px;
 }
 .label {
-  font-size: 20px;
+  font-size: 25px;
   display: block;
 }
 .inputField {
   display: block;
-  width: 80%;
+  width: 90%;
   padding: 10px 10px;
   border: 2px solid #bb9494;
   border-radius: 4px;
+  background-color: rgba(248, 250, 250, 0.986);
 }
 
 .button {
